--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,3 @@
 html, body {
-    background: black;
-}
-
-p, h1, h2, h3, h4, h5, h6, blockquote, pre {
-    color: white;
+    background: darkgray;
 }
